Launched 3 JVMs for various process